app/assets/stylesheets/list.scss
@media (min-width: 1440px) {
    .t-name {
        width: 35%;
    }

    .t-name.no-plat {
        width: 45%;
    }

    .t-release {
        width: 5%;
    }
    .t-developer {
        width: 25%;
    }

    .t-developer.no-plat {
        width: 38%;
    }

    .t-platform {
        width: 18%;
    }
    .t-format {
        width: 5%;
    }
    .t-added {
        width: 12%;
    }

    .t-added.no-plat {
        width: 12%;
    }
}

@media (max-width: 1440px) {
    .t-name {
        width: 25%;
    }

    .t-name.no-plat {
        width: 40%;
    }

    .t-release {
        width: 10%;
    }
    .t-developer {
        width: 23%;
    }

    .t-developer.no-plat {
        width: 32%;
    }

    .t-platform {
        width: 20%;
    }
    .t-format {
        width: 10%;
    }
    .t-added {
        width: 12%;
    }

    .t-added.no-plat {
        width: 18%;
    }
}

@media (max-width: 840px) {
    .t-name {
        width: 25%;
    }

    .t-name.no-plat {
        width: 40%;
    }

    .t-release {
        width: 10%;
    }
    .t-developer {
        width: 17%;
    }

    .t-developer.no-plat {
        width: 32%;
    }

    .t-platform {
        width: 20%;
    }
    .t-format {
        width: 16%;
    }
    .t-added {
        width: 12%;
    }

    .t-added.no-plat {
        width: 18%;
    }
}


#t-ops {
    .uk-modal-body {
        background: #ececec;
        font-size: 14px;
        width: auto;
        min-width: 270px;
        border-radius: 5px;
    }
}

a.t-trigger {
    position: absolute;
    width: 100%;
    height: 100%;
    z-index: 3;
}

.gw-b {
    background: none;
    border: none;
    font-size: 12px;
    color: #929292;
    margin-left: 2px;
    white-space: nowrap;
}


.t-game {
    margin-bottom: 10px;
    border-radius: 3px 0px 0px 3px;
    box-shadow: -3px 4px 3px -2px rgba(0, 0, 0, 0.11);
    font-size: 14px;
    color: $dark_grey;
    position: relative;

    div {
        box-sizing: border-box;
        padding-top: 10px;
        padding-bottom: 10px;
        background: #d2d2d2;
        line-height: 24px;
        font-weight: 300;
    }

}

.t-game.hover-fill div.t {
    background-color: #c5c5c5;
}

.t-menu {
    position: absolute;
    height: 100%;
    width: 83px;
    top: 0;
    right: 0px;
    padding-right: 10px;
    border-radius: 0px 3px 3px 0px;
    text-align: right;
    transition: right 0.3s ease-in-out;
}

.t-menu.out {
    right: -83px;
}

div.menu-shadow {
    background: none;
    position: absolute;
    width: 0%;
    height: 100%;
    top: 0;
    right: 0;
    z-index: -1;
    box-shadow: -6px 4px 3px -2px rgba(0, 0, 0, 0.11);
    transition: width 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
}

.menu-shadow.out {
    width: 100%;
}

.t-added {
    padding-left: 5px;
    z-index: 1;
    padding-right: 10px;
    // border-right: 1px solid #d2d2d2;
    border-radius: 0px 3px 3px 0px;
    font-size: 13px;
    text-align: right;
    transition: border-radius 0.3s, border 0.3s;
}

.t-added.out {
    // border-right: 1px solid #a7a7a7;
    border-radius: 0px;
}

div.t-name {
    padding-left: 10px;
    border-radius: 3px 0px 0px 3px;
    font-size: 16px;
    color: #444;
    font-weight: 400;
}

.t-release {
    text-align: center;
    padding-left: 5px;
}

.t-developer {
    padding-left: 5px;
    z-index: 2;
}

.t-platform {
    padding-left: 5px;
}

.t-format {
    padding-left: 5px;
    text-align: center;
    z-index: 2;
}

.t-game-show {
    .uk-modal-body {
        border-radius: 5px;
        width: 900px;
        background-color: #ececec;
    }

    .info-title {
        padding-right: 24px;
    }

    .info-by {
        color: $dark_grey;
        margin-bottom: 0px;
    }

    .info-year {
        color: #333333;
    }

    .gw-b {
        font-size: 18px;
    }

    hr {
        margin: 15px 0px 10px;
        border-color: #bababa;
    }

    .i-no-cover {
        background: #dcdcdc;
        color: #999;
        border-color: #a9a9a9;
    }

    .i-no-cover svg path {
        fill: #a9a9a9 !important;
    }

    .g-google {
        background: #dcdcdc;
        color: #a9a9a9;
    }

    .g-google:hover {
        background: #cccccc;
        color: #666;
    }

    .g-metacritic {
        border-color: #d0d0d0;
        background: #a9a9a9;
    }

    .g-metacritic:hover {
        border-color: #b4b4b4;
        background: #666;
    }

    .g-metacritic svg {
        fill: #dcdcdc;
    }
}

.uk-slider {
    margin-top: 20px;
}

.uk-slider-items li {
    height: 114.25px;

    img {
        border-radius: 3px;
    }

    .spinner {
        width: 18%;
    }
}

.cover-col {
    width: 200px;
    margin-right: 20px;
}

.t-links {
    margin-top: 10px;
}

.t-cover {
    background: #dcdcdc;
    border-radius: 3px;
    margin-bottom: 12px;
    position: relative;

    .info-cover {
        position: relative;
    }
}

.cover-shadow {
    box-shadow: -2px 4px 9px 1px #0000004a;
}

